# pdf-mcp-tool

./: README.md  pyproject.toml
pdf_tool/: pdf_tool_mcp_server.py
