[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tool"
version = "0.1.0"
description = "A FastMCP server tool to extract pages from PDF files for use with LLMs frontends such as LM-Studio"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Vadim-Dani Dubinsky", email = "dani.dubinsky@gmail.com"}]

requires-python = ">=3.8"

dependencies = [
    "fastmcp>=2.0.0",
    "pypdf>=5.2.0",
    "pathlib",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[project.scripts]
pdf-tool = "pdf_tool.pdf_tool_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
